--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,8 +8,12 @@ spawnentry:
   y: 64
   z: 50
 
-zlarea:
-  x1: 75
-  x2: 125
-  z1: 75
-  z2: 125
+zlareas:
+  0:
+    x1: 75
+    x2: 125
+    z1: 75
+    z2: 125
+
+zlrules:
+  levelDuration: 60
