--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,19 +1,19 @@
-zlentry:
-  x: 100
-  y: 64
-  z: 100
-
 spawnentry:
-  x: 50
-  y: 64
-  z: 50
+  x: 50.0
+  y: 64.0
+  z: 50.0
 
 zlareas:
-  0:
-    x1: 75
-    x2: 125
-    z1: 75
-    z2: 125
+  1:
+    x1: 75.0
+    x2: 125.0
+    z1: 75.0
+    z2: 125.0
+    entry:
+      x: 100.0
+      y: 64.0
+      z: 100.0
 
 zlrules:
   levelDuration: 60
+  playerLives: 3
