--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,9 +2,11 @@ spawnentry:
   x: 50.0
   y: 4.0
   z: 50.0
+  world: world
 
 zlareas:
   1:
+    world: test_world
     x1: 75.0
     x2: 125.0
     z1: 75.0
